fix(security): implement threat intelligence signature loading and caching